--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/adote-um-pet-db
 spring.datasource.username=postgres
 spring.datasource.password=Sa12!2fG
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
